--- a/19-Utilization_of_Object/19-Utilization_of_Object.html
+++ b/19-Utilization_of_Object/19-Utilization_of_Object.html
@@ -4,30 +4,38 @@
     <title>WEB1 - JavaScript</title>
     <meta charset="utf-8" />
     <script>
+      function LinksSetColor(color) {
+        var alist = document.querySelectorAll("a");
+        var i = 0;
+        while (i < alist.length) {
+          console.log(alist[i]);
+          alist[i].style.color = color;
+          i = i + 1;
+        }
+      }
+
+      function BodySetColor(color) {
+        document.querySelector("body").style.color = color;
+      }
+
+      function BodySetbackgroundSetColor(color) {
+        document.querySelector("body").style.backgroundColor = color;
+      }
+
       function nightDayhandler(self) {
         var target = document.querySelector("body");
         if (self.value === "night") {
-          target.style.backgroundColor = "black";
-          target.style.color = "white";
+          Body.SetbackgroundSetColor("black");
+          Body.SetColor("white");
           self.value = "day";
-          var alist = document.querySelectorAll("a");
-          var i = 0;
-          while (i < alist.length) {
-            console.log(alist[i]);
-            alist[i].style.color = "powderblue";
-            i = i + 1;
-          }
+
+          LinksSetColor("powderblue");
         } else {
-          target.style.backgroundColor = "white";
-          target.style.color = "black";
+          Body.SetbackgroundSetColor("white");
+          Body.SetColor("black");
           self.value = "night";
-          var alist = document.querySelectorAll("a");
-          var i = 0;
-          while (i < alist.length) {
-            console.log(alist[i]);
-            alist[i].style.color = "blue";
-            i = i + 1;
-          }
+
+          Links.SetColor("blue");
         }
       }
     </script>
