--- a/19-Utilization_of_Object/19-Utilization_of_Object.html
+++ b/19-Utilization_of_Object/19-Utilization_of_Object.html
@@ -4,24 +4,26 @@
     <title>WEB1 - JavaScript</title>
     <meta charset="utf-8" />
     <script>
-      function LinksSetColor(color) {
-        var alist = document.querySelectorAll("a");
-        var i = 0;
-        while (i < alist.length) {
-          console.log(alist[i]);
-          alist[i].style.color = color;
-          i = i + 1;
-        }
-      }
+      var Body = {
+        SetColor: function (color) {
+          document.querySelector("body").style.color = color;
+        },
+        SetbackgroundSetColor: function (color) {
+          document.querySelector("body").style.backgroundColor = color;
+        },
+      };
 
-      function BodySetColor(color) {
-        document.querySelector("body").style.color = color;
-      }
-
-      function BodySetbackgroundSetColor(color) {
-        document.querySelector("body").style.backgroundColor = color;
-      }
-
+      var Links = {
+        SetColor: function (color) {
+          var alist = document.querySelectorAll("a");
+          var i = 0;
+          while (i < alist.length) {
+            console.log(alist[i]);
+            alist[i].style.color = color;
+            i = i + 1;
+          }
+        },
+      };
       function nightDayhandler(self) {
         var target = document.querySelector("body");
         if (self.value === "night") {
@@ -29,7 +31,7 @@
           Body.SetColor("white");
           self.value = "day";
 
-          LinksSetColor("powderblue");
+          Links.SetColor("powderblue");
         } else {
           Body.SetbackgroundSetColor("white");
           Body.SetColor("black");
